Small adjustment to mobile styling for character profile

--- a/src/components/CharacterProfile/CharacterProfile.module.scss
+++ b/src/components/CharacterProfile/CharacterProfile.module.scss
@@ -8,6 +8,7 @@ $breakpoint-mobile: 400px;
 
     @media screen and (max-width: $breakpoint-mobile) {
         display: block;
+        margin: 2rem 0;
     }
 
     &__portrait {
