--- a/src/components/CharacterProfile/CharacterProfile.module.css
+++ b/src/components/CharacterProfile/CharacterProfile.module.css
@@ -7,6 +7,7 @@
 @media screen and (max-width: 400px) {
   .characterProfile {
     display: block;
+    margin: 2rem 0;
   }
 }
 .characterProfile__portrait {
