--- a/src/components/CharacterListing/CharacterListingControls.module.css
+++ b/src/components/CharacterListing/CharacterListingControls.module.css
@@ -4,6 +4,11 @@
   padding: 1rem;
   display: flex;
 }
+@media screen and (max-width: 400px) {
+  .characterListControls {
+    margin: 0 0 2rem 0;
+  }
+}
 .characterListControls__combo {
   min-width: 8rem;
   margin-right: 2rem;
