--- a/src/components/CharacterListing/CharacterListingControls.module.scss
+++ b/src/components/CharacterListing/CharacterListingControls.module.scss
@@ -1,3 +1,4 @@
+$breakpoint-mobile: 400px;
 
 .characterListControls {
     background: white;
@@ -5,18 +6,23 @@
     padding: 1rem;
     display: flex;
 
+    @media screen and (max-width: $breakpoint-mobile) {
+        margin: 0 0 2rem 0;
+    }
+
     &__combo {
         min-width: 8rem;
         margin-right: 2rem;
         text-align: left;
 
-        & select, & label {
+        & select,
+        & label {
             width: 100%;
             display: block;
         }
 
         & label {
-            margin-bottom: .25rem;
+            margin-bottom: 0.25rem;
         }
     }
 }
